# ire-archive-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci-cd.yml  manual-prod-deploy.yml  reindex-prod.yml
app/: __init__.py  config.py  dependencies.py  diagnostics.py  exceptions.py  main.py  models.py  rate_limit.py  validators.py
app/auth/: __init__.py  config.py  dependencies.py  exceptions.py  membersuite_client.py  redirect_validator.py  routes.py  session.py
app/services/: cache_service.py  filter_service.py  recommendation_service.py  reranking_service.py  search_service.py
config/: qdrant.service  semantic-search-api.service
data/: fixtures.json
docker/: Dockerfile  Dockerfile.base  docker-compose.yml  entrypoint.sh  supervisord.conf
docker/config/: qdrant.yaml
docs/: API_CONTRACT.md  AUTH_TESTING_GUIDE.md  REDIS_SETUP.md
scripts/: clear_db.py  cli_utils.py  data_io.py  dev_tasks.py  index.py  models.py  prod_tasks.py  qdrant_ops.py  setup_tasks.py  transforms.py
tests/: conftest.py  test_validators.py
tests/test_api/: test_cors_config.py  test_resource.py  test_search.py
tests/test_auth/: test_redirect_validator.py  test_return_to_flow.py
tests/test_services/: test_cache_service.py  test_filter_service.py  test_recommendation_service.py  test_search_service.py
