[project]
name = "ire-archive-backend"
version = "0.0.0"
requires-python = "==3.12.*"
dependencies = [
    "rich",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "sentence-transformers",
    "qdrant-client==1.17.1",
    "torch",
    "numpy",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "tqdm",
    "watchdog",
    "aiofiles",
    "psutil",
    "cachetools",
    "beautifulsoup4",
    "python-dateutil",
    "fastembed>=0.3.0",
    "onnxruntime>=1.16.0",
    "optimum[onnxruntime]>=1.16.0",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "itsdangerous>=2.1.0",
]
authors = [
    { name = "Investigative Reporters & Editors", email = "help@ire.org" },
]
description = "FastAPI backend for archive.ire.org"
readme = "README.md"

[project.optional-dependencies]
dev = ["pre-commit"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-runner",
    "pytest-cov",
    "pytest-env",
    "pytest-vcr",
    "pytest-xdist",
]
mypy = ["mypy", "types-cachetools", "types-python-dateutil", "types-requests"]
notebooks = ["jupyterlab", "pandas", "altair", "tabulate"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]
select = ["UP"]

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
files = ["app", "scripts", "tests"]
exclude = "(^site/|^logs/|^models_cache/|^data/)"
cache_dir = ".mypy_cache"
warn_unused_configs = true
ignore_missing_imports = true
